--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -108,6 +108,7 @@ library
       HaskellWorks.Data.Json.Backend.Simple.Value
       HaskellWorks.Data.Json.Backend.Standard.Cursor
       HaskellWorks.Data.Json.Backend.Standard.Fast
+      HaskellWorks.Data.Json.Backend.Standard.Index
       HaskellWorks.Data.Json.Backend.Standard.Load
       HaskellWorks.Data.Json.Backend.Standard.LoadCursor
       HaskellWorks.Data.Json.Backend.Standard.SemiIndex
