New Load.Partial module

--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -109,8 +109,8 @@ library
       HaskellWorks.Data.Json.Backend.Standard.Cursor
       HaskellWorks.Data.Json.Backend.Standard.Fast
       HaskellWorks.Data.Json.Backend.Standard.Index
-      HaskellWorks.Data.Json.Backend.Standard.Load
       HaskellWorks.Data.Json.Backend.Standard.Load.Cursor
+      HaskellWorks.Data.Json.Backend.Standard.Load.Partial
       HaskellWorks.Data.Json.Backend.Standard.Load.Raw
       HaskellWorks.Data.Json.Backend.Standard.LoadCursor
       HaskellWorks.Data.Json.Backend.Standard.SemiIndex
