--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -70,6 +70,8 @@ common word8                { build-depends: word8                >= 0.1        
 common semigroups   { if impl(ghc <  8    ) { build-depends: semigroups     >= 0.16     && < 0.19 } }
 
 common config
+  default-language: Haskell2010
+  ghc-options: -Wall
   if flag(sse42)
     ghc-options: -mbmi2
   if flag(bmi2) && impl(ghc >= 8.4.1)
@@ -98,7 +100,7 @@ library
           , vector
           , word8
   hs-source-dirs: src
-  ghc-options: -Wall -O2 -msse4.2
+  ghc-options: -O2 -msse4.2
 
   exposed-modules:
       HaskellWorks.Data.Json
@@ -146,7 +148,6 @@ library
       Paths_hw_json
   autogen-modules:
       Paths_hw_json
-  default-language: Haskell2010
 
 executable hw-json
   import:   base, config
@@ -171,9 +172,8 @@ executable hw-json
       App.Commands.Types
       App.Lens
   hs-source-dirs: app
-  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -O2 -msse4.2
-  build-depends: hw-json
-  default-language: Haskell2010
+  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -O2 -msse4.2
+  build-depends:  hw-json
 
 test-suite hw-json-test
   import:   base, config
@@ -193,7 +193,7 @@ test-suite hw-json-test
   main-is: Spec.hs
   build-depends: hw-json
   hs-source-dirs: test
-  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
   other-modules:
       HaskellWorks.Data.Json.Backend.Simple.CursorSpec
       HaskellWorks.Data.Json.Backend.Standard.Succinct.Cursor.BalancedParensSpec
@@ -207,7 +207,6 @@ test-suite hw-json-test
       HaskellWorks.Data.Json.TypeSpec
       HaskellWorks.Data.Json.ValueSpec
       Paths_hw_json
-  default-language: Haskell2010
   build-tools: hspec-discover
 
 benchmark bench
@@ -220,7 +219,6 @@ benchmark bench
   type: exitcode-stdio-1.0
   main-is: Main.hs
   hs-source-dirs: bench
-  ghc-options: -Wall -O2 -msse4.2
+  ghc-options: -O2 -msse4.2
   build-depends: hw-json
   other-modules: Paths_hw_json
-  default-language: Haskell2010
