--- a/demo/hw-json-demo.cabal
+++ b/demo/hw-json-demo.cabal
@@ -39,13 +39,15 @@ flag sse42
 
 common base                 { build-depends: base                 >= 4          && < 5      }
 
+common aeson                { build-depends: aeson                >= 1.4.2.0    && < 1.5    }
 common ansi-wl-pprint       { build-depends: ansi-wl-pprint       >= 0.6.8.2    && < 0.7    }
 common array                { build-depends: array                >= 0.5        && < 0.6    }
 common attoparsec           { build-depends: attoparsec           >= 0.13       && < 0.14   }
 common bits-extra           { build-depends: bits-extra           >= 0.0.1      && < 0.1    }
 common bytestring           { build-depends: bytestring           >= 0.10.6     && < 0.11   }
 common criterion            { build-depends: criterion            >= 1.4        && < 1.6    }
-common directory            { build-depends: directory            >= 1.3        &&  < 1.4   }
+common deepseq              { build-depends: deepseq              >= 1.4.0.0    && < 1.5    }
+common directory            { build-depends: directory            >= 1.3        && < 1.4    }
 common dlist                { build-depends: dlist                >= 0.8        && < 0.9    }
 common hedgehog             { build-depends: hedgehog             >= 0.5        && < 0.7    }
 common hspec                { build-depends: hspec                >= 2.4        && < 3      }
@@ -81,11 +83,17 @@ common config
 
 library
   import:   base, config
+          , aeson
+          , bytestring
+          , deepseq
+          , hw-balancedparens
+          , hw-bits
           , hw-json
           , hw-json-simd
-  hs-source-dirs: src
-  ghc-options: -O2 -msse4.2
-  other-modules:
-      Paths_hw_json_demo
-  autogen-modules:
-      Paths_hw_json_demo
+          , hw-prim
+          , mmap
+          , vector
+  hs-source-dirs:   src
+  ghc-options:      -O2 -msse4.2
+  other-modules:    Paths_hw_json_demo
+  autogen-modules:  Paths_hw_json_demo
