Update README.  Add hw-rankselect and hw-rankselect-base to demo library dependencies

--- a/demo/hw-json-demo.cabal
+++ b/demo/hw-json-demo.cabal
@@ -91,6 +91,8 @@ library
           , hw-json
           , hw-json-simd
           , hw-prim
+          , hw-rankselect
+          , hw-rankselect-base
           , mmap
           , vector
   hs-source-dirs:   src
