--- a/demo/hw-json-demo.cabal
+++ b/demo/hw-json-demo.cabal
@@ -86,6 +86,7 @@ library
           , aeson
           , bytestring
           , deepseq
+          , dlist
           , hw-balancedparens
           , hw-bits
           , hw-json
