Consistent use idx extention for index files

--- a/demo/hw-json-demo.cabal
+++ b/demo/hw-json-demo.cabal
@@ -15,13 +15,6 @@ license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
     README.md
-    corpus/5000B.bp
-    corpus/5000B.ib
-    corpus/5000B.json
-    corpus/issue-0001.bp
-    corpus/issue-0001.ib
-    corpus/issue-0001.json
-    corpus/issue-0001.md
 
 source-repository head
   type: git
@@ -40,35 +33,22 @@ flag sse42
 common base                 { build-depends: base                 >= 4          && < 5      }
 
 common aeson                { build-depends: aeson                >= 1.4.2.0    && < 1.5    }
-common ansi-wl-pprint       { build-depends: ansi-wl-pprint       >= 0.6.8.2    && < 0.7    }
-common array                { build-depends: array                >= 0.5        && < 0.6    }
-common attoparsec           { build-depends: attoparsec           >= 0.13       && < 0.14   }
 common bits-extra           { build-depends: bits-extra           >= 0.0.1      && < 0.1    }
 common bytestring           { build-depends: bytestring           >= 0.10.6     && < 0.11   }
-common criterion            { build-depends: criterion            >= 1.4        && < 1.6    }
 common deepseq              { build-depends: deepseq              >= 1.4.0.0    && < 1.5    }
-common directory            { build-depends: directory            >= 1.3        && < 1.4    }
 common dlist                { build-depends: dlist                >= 0.8        && < 0.9    }
-common hedgehog             { build-depends: hedgehog             >= 0.5        && < 0.7    }
-common hspec                { build-depends: hspec                >= 2.4        && < 3      }
 common hw-balancedparens    { build-depends: hw-balancedparens    >= 0.2.0.1    && < 0.3    }
 common hw-bits              { build-depends: hw-bits              >= 0.7.0.5    && < 0.8    }
-common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog    >= 0.1.0.4    && < 0.2    }
 common hw-json              { build-depends: hw-json              >= 1.0.0.0    && < 1.1    }
 common hw-json-simd         { build-depends: hw-json-simd         >= 0.1.0.1    && < 0.2    }
 common hw-mquery            { build-depends: hw-mquery            >= 0.2.0.0    && < 0.3    }
-common hw-parser            { build-depends: hw-parser            >= 0.1        && < 0.2    }
 common hw-prim              { build-depends: hw-prim              >= 0.6.2.21   && < 0.7    }
 common hw-rankselect        { build-depends: hw-rankselect        >= 0.12.0.4   && < 0.13   }
 common hw-rankselect-base   { build-depends: hw-rankselect-base   >= 0.3.2.1    && < 0.4    }
 common hw-simd              { build-depends: hw-simd              >= 0.1.1.2    && < 0.2    }
 common lens                 { build-depends: lens                 >= 4          && < 5      }
 common mmap                 { build-depends: mmap                 >= 0.5        && < 0.6    }
-common optparse-applicative { build-depends: optparse-applicative >= 0.14       && < 0.15   }
-common text                 { build-depends: text                 >= 1.2        && < 1.3    }
-common transformers         { build-depends: transformers         >= 0.4        && < 0.6    }
 common vector               { build-depends: vector               >= 0.12       && < 0.13   }
-common word8                { build-depends: word8                >= 0.1        && < 0.2    }
 
 common semigroups   { if impl(ghc <  8    ) { build-depends: semigroups     >= 0.16     && < 0.19 } }
 
@@ -89,6 +69,7 @@ library
           , dlist
           , hw-balancedparens
           , hw-bits
+          , hw-mquery
           , hw-json
           , hw-json-simd
           , hw-prim
