--- a/hw-json.cabal
+++ b/hw-json.cabal
@@ -45,8 +45,9 @@ common attoparsec           { build-depends: attoparsec           >= 0.13       
 common bits-extra           { build-depends: bits-extra           >= 0.0.1      && < 0.1    }
 common bytestring           { build-depends: bytestring           >= 0.10.6     && < 0.11   }
 common criterion            { build-depends: criterion            >= 1.4        && < 1.6    }
-common directory            { build-depends: directory            >= 1.3        &&  < 1.4   }
+common directory            { build-depends: directory            >= 1.3        && < 1.4    }
 common dlist                { build-depends: dlist                >= 0.8        && < 0.9    }
+common generic-lens         { build-depends: generic-lens         >= 1.1.0.0    && < 1.2    }
 common hedgehog             { build-depends: hedgehog             >= 0.5        && < 0.7    }
 common hspec                { build-depends: hspec                >= 2.4        && < 3      }
 common hw-balancedparens    { build-depends: hw-balancedparens    >= 0.2.0.1    && < 0.3    }
@@ -99,9 +100,10 @@ library
           , text
           , vector
           , word8
-  hs-source-dirs: src
-  ghc-options: -O2 -msse4.2
-
+  hs-source-dirs:   src
+  ghc-options:      -O2 -msse4.2
+  other-modules:    Paths_hw_json
+  autogen-modules:  Paths_hw_json
   exposed-modules:
       HaskellWorks.Data.Json
       HaskellWorks.Data.Json.Backend.Simple.Cursor
@@ -144,15 +146,12 @@ library
       HaskellWorks.Data.Json.Query
       HaskellWorks.Data.Json.Type
       HaskellWorks.Data.Json.Value
-  other-modules:
-      Paths_hw_json
-  autogen-modules:
-      Paths_hw_json
 
 executable hw-json
   import:   base, config
           , bytestring
           , dlist
+          , generic-lens
           , hw-balancedparens
           , hw-json-simd
           , hw-mquery
@@ -164,16 +163,16 @@ executable hw-json
           , optparse-applicative
           , semigroups
           , vector
-  main-is: Main.hs
+  main-is:        Main.hs
+  hs-source-dirs: app
+  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -O2 -msse4.2
+  build-depends:  hw-json
   other-modules:
       App.Commands
       App.Commands.CreateIndex
       App.Commands.Demo
       App.Commands.Types
       App.Lens
-  hs-source-dirs: app
-  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -O2 -msse4.2
-  build-depends:  hw-json
 
 test-suite hw-json-test
   import:   base, config
@@ -189,11 +188,12 @@ test-suite hw-json-test
           , hw-rankselect-base
           , transformers
           , vector
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  build-depends: hw-json
+  type:           exitcode-stdio-1.0
+  main-is:        Spec.hs
+  build-depends:  hw-json
   hs-source-dirs: test
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
+  build-tools:    hspec-discover
   other-modules:
       HaskellWorks.Data.Json.Backend.Simple.CursorSpec
       HaskellWorks.Data.Json.Backend.Standard.Succinct.Cursor.BalancedParensSpec
@@ -207,7 +207,6 @@ test-suite hw-json-test
       HaskellWorks.Data.Json.TypeSpec
       HaskellWorks.Data.Json.ValueSpec
       Paths_hw_json
-  build-tools: hspec-discover
 
 benchmark bench
   import:   base, config
@@ -216,9 +215,9 @@ benchmark bench
           , directory
           , mmap
           , semigroups
-  type: exitcode-stdio-1.0
-  main-is: Main.hs
+  type:           exitcode-stdio-1.0
+  main-is:        Main.hs
   hs-source-dirs: bench
-  ghc-options: -O2 -msse4.2
-  build-depends: hw-json
-  other-modules: Paths_hw_json
+  ghc-options:    -O2 -msse4.2
+  build-depends:  hw-json
+  other-modules:  Paths_hw_json
